--- a/MythBots/src/index.html
+++ b/MythBots/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/79b3d7b09d.js" crossorigin="anonymous"></script>
 </body>
 </html>
